Removes XX:MaxPermSize JVM option.